--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
  <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-    <link href="/home/will/Documents/Git/Random-Quote/MDB Free/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/home/will/Documents/Git/Random-Quote/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="/home/will/Documents/Git/Random-Quote/MDB Free/css/mdb.min.css" rel="stylesheet">
+    <link href="/home/will/Documents/Git/Random-Quote/mdb.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600i|Taviraj:100i" rel="stylesheet"> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
 <script type="text/javascript" src="script.js"></script>
