--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  		<!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-    <link href="/home/will/Documents/Git/Random-Quote/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="/home/will/Documents/Git/Random-Quote/mdb.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600i|Taviraj:100i" 	rel="stylesheet"> 
