--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="/home/will/Documents/Git/Random-Quote/mdb.min.css" rel="stylesheet">
+    <link href="mdb.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600i|Taviraj:100i" 	rel="stylesheet"> 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
 		<script type="text/javascript" src="script.js"></script>
